- Fix to model z-index of cart slide-in on Atomik theme with fixed header - Responsive improvements for cart page and cart overlay, better formatting of product options (only class/table changes, compatible with overrides)

--- a/css/community-store.css
+++ b/css/community-store.css
@@ -14,7 +14,7 @@
 
 .store-whiteout {
     position: fixed;
-    z-index: 999;
+    z-index: 2000;
     top: 0;
     left: 0;
     width: 100%;
